<resources>
    <!-- App name -->
    <string name="app_name">MyTireCenter</string>

    <!-- Location permission message -->
    <string name="permission_reason_title">Location permission</string>
    <string name="permission_reason_message">We need this permission to locate tire centers nearby.</string>
    <string name="no_location_permission_title">Permission Warning!</string>
    <string name="no_location_permission_message">Without location permission you will not be able to visualize the map.</string>

    <!-- Main menu options -->
    <string name="action_settings">Settings</string>
    <string name="action_favourite">Favourite tire centers</string>
    <string name="action_nearest_tire_centers">Nearest tire centers</string>
    <string name="action_search_tire_center">Search tire center</string>

    <!-- Favourite tire centers message -->
    <string name="added_to_favourite">Added to favourite!</string>
    <string name="removed_from_favourite">Removed from favourite!</string>
    <string name="tire_centers_cleared">Tire centers cleared!</string>

    <!-- Fragment titles -->
    <string name="fragment_tire_centers_list_title">List tire centers</string>
    <string name="fragment_tire_centers_map_title">Tire centers map</string>
    <string name="fragment_tire_center_details_title">Tire center details</string>
    <string name="fragment_tire_center_search_title">Search tire center</string>

    <!-- Map -->
    <string name="action_map">Map</string>
    <string name="my_position">I\'m here!</string>
    <string name="my_position_snippet">This is my position!</string>
    <string name="address">Address: </string>

    <!-- Tire center details information -->
    <string name="fragment_tire_center_details_name">Name: </string>
    <string name="fragment_tire_center_details_address">Address: </string>
    <string name="fragment_tire_center_details_telephone">Telephone number: </string>

    <!-- Settings configuration -->
    <string name="config_data_title">Data configuration</string>
    <string name="other_settings">Other Settings</string>
    <string name="clear_favourite_title">Clear favourite tire centers</string>
    <string name="clear_favourite_summary">Delete all favourite tire centers</string>
    <string name="preferences_map_type_title">Map Type</string>
    <string name="preferences_map_type_summary">Select the type of the Map</string>
    <string name="preferences_map_type_hybrid">Hybrid</string>
    <string name="preferences_map_type_normal">Normal</string>
    <string name="preferences_map_type_satellite">Satellite</string>
    <string name="preferences_map_type_terrain">Terrain</string>
    <string-array name="map_type_labels">
        <item>@string/preferences_map_type_hybrid</item>
        <item>@string/preferences_map_type_normal</item>
        <item>@string/preferences_map_type_satellite</item>
        <item>@string/preferences_map_type_terrain</item>
    </string-array>
    <string-array name="map_type_values">
        <item>4</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Content description -->
    <string name="tire_image">Tire image</string>
    <string name="favourite_image">Favourite image</string>

</resources>
